[package]
name = "dlc_venc_pairing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls12_381 = { version = "0.1.4", package = "irmaseal-curve", features = ["experimental"] }
anyhow = "1"
secp256kfun = {  version = "0.7", features = ["serde"] }
sha2 = "0.9"
rand = { version = "0.8" }
clap = {  version = "3", features = ["derive"] }
ff = "0.12"
group = "0.12"
bincode = {  version = "2.0.0-rc.1", features = ["serde"] }
sigma_fun = "0.4"
rand_chacha = "0.3"
serde = { version = "1" }
